# HitmanAbsolutionEditor

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  README_ua.md  vcpkg.json
.github/workflows/: release.yml
assets/: Enums.json  HeaderLibraries.txt  Properties.json  ResourceTypes.txt  TextList_Hashes.json  TypeIDs.json
assets/shaders/: ArmatureSolidSphere_PS.hlsl  ArmatureSolidSphere_VS.hlsl  Blur.hlsl  ChannelControl_PS.hlsl  ColorUtility.hlsl  Common.hlsl  CommonBuffer.hlsl  CommonBuffers.hlsl  CommonSampler.hlsl  CommonTexture.hlsl  DataStructs.hlsl  MeshBlinnPhong_PS.hlsl  MeshDefault_VS.hlsl  Outline.hlsl  PhongDifNrm_PS.hlsl  PhongDifNrm_VS.hlsl  PhongDifSpcNrm_PS.hlsl  PhongDifSpc_PS.hlsl  PhongDif_PS.hlsl  PhongDif_VS.hlsl  Phong_PS.hlsl  SimpleElementPixelShader.hlsl  SimpleElementVertexShader.hlsl  Simple_PS.hlsl  Simple_VS.hlsl  SkeletonSolid_PS.hlsl  SkeletonSolid_VS.hlsl  Solid_PS.hlsl  Solid_VS.hlsl
include/: Allocation.h  Delegate.h  Display.h  Editor.h  Hash.h  Logger.h  Settings.h  TextEditor.h  Timer.h
include/CloakWorks/: CloakWorks.h
include/Connection/: PipeClient.h  SharedMemoryClient.h
include/FSB/: Container.h  FSB.h
include/Glacier/: EActorPerceptionSensitivity.h  ECameraState.h  ESettingsParam.h  SBodyPartDamageMultipliers.h  SColorRGB.h  SColorRGBA.h  SSettingsParamMultiplier.h  ZCurve.h  ZGameTime.h  ZObjectRef.h  ZSharedSensorDef.h  ZString.h  ZVariant.h
include/HLSL/: HLSLDecompiler.h
include/IO/: BinaryReader.h  GLTFStreamWriter.h  InputFileStream.h  InputMemoryStream.h  MemoryInputAVIOContext.h  PhysXStream.h
include/Math/: BoundingBox.h  Color.h  Intersection.h  LinearColor.h  Matrix.h  Matrix33.h  Matrix44.h  Quaternion.h  Ray.h  RayHit.h  Sphere.h  Vector2.h  Vector3.h  Vector4.h
include/Registry/: EnumRegistry.h  GlobalBoneRegistry.h  PropertyRegistry.h  ResourceIDRegistry.h  ResourceInfoRegistry.h  TextListHashRegistry.h  TypeRegistry.h
include/Rendering/: BlendState.h  CommandList.h  ConstantBuffer.h  ConstantBuffers.h  DepthStencilState.h  Descriptor.h  DirectXRenderer.h  ImGuiRenderer.h  ImageLayout.h  (+18 more)
resources/: app.rc
src/: Display.cpp  Editor.cpp  Logger.cpp  Settings.cpp  TextEditor.cpp  Timer.cpp  main.cpp
(+605 files in other folders)
